[package]
name = "graph"
version = "0.1.0"
edition = "2021"
description = "Temporal knowledge graph system with dynamic memory capabilities"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
aws-config = "1.0"
aws-sdk-neptune = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-opensearch = "1.15"
aws-sdk-s3 = "1.15"
aws-sdk-iam = "1.15"
aws-sdk-sqs = "1.15"
gremlin-client = "0.8.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
async-stream = "0.3"
metrics = "0.21"
dashmap = "5.5"
url = "2.5.0"
opensearch = "2.1.0"
ndarray = "0.15"
log = "0.4"
lru = "0.12"
pin-project = "1.1"
axum = { version = "0.7.4", features = ["macros"] }
tower-http = { version = "0.5.1", features = ["trace", "auth", "limit"] }
tower = { version = "0.4", features = ["util"] }
hyper = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
rust-bert = "0.22"
tokenizers = "0.15"
tch = { version = "0.14.0", features = ["download-libtorch"] }
torch-sys = { version = "0.14.0", features = ["download-libtorch"] }
rayon = "1.8"
regex = "1.10"
erased-serde = "0.4.6"
lazy_static = "1.5"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
test-log = "0.2"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async"] }
aws-smithy-client = "0.60"
wiremock = "0.5"
opensearch = "2.1.0"

[features]
default = []
integration-tests = []
cuda = []

[[bench]]
name = "graph_operations"
harness = false

[[example]]
name = "basic_operations"
path = "examples/basic_operations.rs"

[[example]]
name = "api_client"
path = "examples/api_client.rs"

[[example]]
name = "temporal_query"
path = "examples/temporal_query.rs"

[build]
rustflags = ["-C", "link-args=-std=c++17"] 
